   allowed on very few tags.
 * Match templates are now applied in a more controlled fashion: in the order
   they are declared in the template source, all match templates up to (and
   including) the matching template itself are applied to the matched content,
   whereas the match templates declared after the matching template are only
   applied to the generated content (ticket #186).
 * The `TemplateLoader` class now provides an `instantiate()` method that can
   be overridden by subclasses to implement advanced template instantiation
   logic (ticket #204).
 * The search path of the `TemplateLoader` class can now contain ''load
   functions'' in addition to path strings. A load function is passed the
   name of the requested template file, and should return a file-like object
   and some metadata. New load functions are supplied for loading from egg
   package data, and loading from different loaders depending on the path
   prefix of the requested filename (ticket #182).
 * Match templates can now be processed without keeping the complete matched
   content in memory, which could cause excessive memory use on long pages.
   The buffering can be disabled using the new `buffer` optimization hint on
   the `<py:match>` directive.
 * Improve error reporting when accessing an attribute in a Python expression
   raises an `AttributeError` (ticket #191).
 * The `Markup` class now supports mappings for right hand of the `%` (modulo)
   operator in the same way the Python string classes do, except that the
   substituted values are escape. Also, the special constructor which took
   positional arguments that would be substituted was removed. Thus the
   `Markup` class now supports the same arguments as that of its `unicode`
   base class (ticket #211).


Version 0.4.4
http://svn.edgewall.org/repos/genshi/tags/0.4.4/
(Aug 14, 2007, from branches/stable/0.4.x)

 * Fixed augmented assignment to local variables in Python code blocks.